--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@ html {
     width: 100%;
 	height: 100%;
 	font-family: Helvetica, sans-serif;
-	background-image: url("web\images\istockphoto-1124594504-612x612.jpg");
 }
 /*****************/
 /*    Header     */
@@ -11,8 +10,8 @@ html {
 .header {
 	position: relative;
 	overflow: hidden;
-	padding-top: 6rem;
-	padding-bottom: 12rem;
+	padding-top: 3rem;
+	padding-bottom: 10rem;
 	background-color: #333333;
 }
 .header .text-container {
@@ -117,6 +116,8 @@ li a:hover{
 
 .active{
 	display: block;
+	color: black; 
+	font-weight: bolder;
 	background-color:#00adc4;;
 }
 
@@ -234,7 +235,7 @@ li a:hover{
 .block5 {
 	width: auto;
 	margin-top: 0;
-	margin-left: 5vw;
+	margin-left: -6w;
 	margin-right:5vw;
 }
 
